--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
+    "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.167.0"
   },
   "devDependencies": {
